--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -340,6 +340,15 @@ svg {
   font-weight: bold;
 }
 
+.character_sns_links {
+  margin: 13px auto;
+  width: 80px;
+  color: #888;
+  display: flex;
+  justify-content: space-between;
+  font-size: 22px;
+}
+
 .character_topic {
   width: 385px;
   height: calc(100% - 2px);
@@ -379,7 +388,7 @@ svg {
 }
 
 .detail {
-  margin-top: 100px;
+  margin-top: 55px;
 }
 
 .character_btn {
@@ -718,13 +727,36 @@ svg {
   position: relative;
 }
 
-.edit_character_sns {
-  margin-top: 14px;
-  padding: 5px;
-  width: 100%;
-  border: none;
-  background-color: #f5f5f5;
-  border-radius: 3px;
+.edit_sns_btn {
+  padding: 3px 12px;
+  font-size: 12px;
+  background-color: #fff;
+  color: #770099;
+  border: 1px solid #770099;
+  border-radius: 20px;
+  display: inline-block;
+  position: relative;
+}
+
+.edited_character_sns_links {
+  width: 80px;
+  margin-bottom: 6px;
+  color: #888;
+  display: flex;
+  justify-content: space-between;
+  font-size: 22px;
+}
+
+.twitter_active {
+  color: #1DA1F2;
+}
+
+.facebook_active {
+  color: #4267B2;
+}
+
+.instagram_active {
+  color: #C13584;
 }
 
 .character_description_field {
@@ -789,7 +821,7 @@ svg {
 
 /* カテゴリボックス */
 .category_select_box {
-  width: 390px;
+  width: 410px;
   padding: 15px;
   border: 1px solid #4A154B;
   background-color: #fff;
@@ -800,10 +832,6 @@ svg {
   top: 120px;
   left: 0;
   z-index: 1;
-}
-
-.visible {
-  display: block;
 }
 
 .check_btn {
@@ -833,6 +861,51 @@ svg {
 .category_checked {
   background-color: #770099;
   color: #fff;
+}
+
+/* SNSボックス */
+
+.edit_sns_box {
+  width: 410px;
+  padding: 15px;
+  border: 1px solid #4A154B;
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0px 0px 7px #888;
+  display: none;
+  position: absolute;
+  top: 98px;
+  left: 0;
+  z-index: 1;
+}
+
+.character_sns_form_box {
+  width: 100%;
+  margin: 10px 0;
+  display: flex;
+}
+
+.edit_character_sns_before {
+  padding: 5px 10px 0 10px;
+  background-color: #e1e1e1;
+  border-radius: 3px 0 0 3px;
+  font-size: 12px;
+  color: #000;
+  font-weight: normal;
+}
+
+.edit_character_sns {
+  padding: 5px;
+  width: 100%;
+  border: none;
+  background-color: #f5f5f5;
+  border-radius: 0 3px 3px 0;
+}
+
+/* ボックス表示 */
+
+.visible {
+  display: block;
 }
 
 /* 詳細データ編集ページ */
