画像ファイルパスをアセットへ変更

--- a/app/assets/stylesheets/styles.css.erb
+++ b/app/assets/stylesheets/styles.css.erb
@@ -87,7 +87,7 @@ svg {
 
 .categories {
   height: calc(100% - 40px);
-  background: url("/images/side_bar_back.png") bottom no-repeat;
+  background: url("<%= asset_path('side_bar_back.png') %>") bottom no-repeat;
 }
 
 .category_btn {
