--- a/app/assets/stylesheets/users.css.erb
+++ b/app/assets/stylesheets/users.css.erb
@@ -5,7 +5,7 @@
   width: 100vw;
   display: flex;
   align-items: center;
-  background: url("/images/main_back.jpg") center/cover;
+  background: url("<%= asset_path('main_back.jpg') %>") center/cover;
 }
 
 .user_contents {
