--- a/app/views/categories/_main_view_edit.html.erb
+++ b/app/views/categories/_main_view_edit.html.erb
@@ -62,6 +62,9 @@
         </div>
       </div>
     </div>
+    <% if current_user.email == 'guest@example.com' %> <%# ボトムインフォ %>
+      <%= render partial: "shared/guest_user_notice" %>
+    <% end %>
   </div>
 <% end %>
 
