--- a/app/views/categories/_main_view_new.html.erb
+++ b/app/views/categories/_main_view_new.html.erb
@@ -33,7 +33,7 @@
   </div>
   
   <div class="main_contents">
-    <div class="main_contents_wrapper">
+    <div class="main_contents_wrapper height_lock">
       <div class="character_list">
         <div class="character_list_top">
           <div class="character_list_top_left">
@@ -61,5 +61,8 @@
         </div>
       </div>
     </div>
+    <% if current_user.email == 'guest@example.com' %> <%# ボトムインフォ %>
+      <%= render partial: "shared/guest_user_notice" %>
+    <% end %>
   </div>
 <% end %>
