--- a/app/views/categories/_main_view_show.html.erb
+++ b/app/views/categories/_main_view_show.html.erb
@@ -127,4 +127,7 @@
       <% end %>
     </div>
   </div>
+  <% if current_user.email == 'guest@example.com' %> <%# ボトムインフォ %>
+    <%= render partial: "shared/guest_user_notice" %>
+  <% end %>
 </div>
