--- a/app/views/characters/_main_view_character_edit.html.erb
+++ b/app/views/characters/_main_view_character_edit.html.erb
@@ -34,7 +34,6 @@
 
 <div class="main_contents">
   <div class="main_contents_wrapper">
-    
     <div class="edit_character_form">
       <%= form_with model: @character, local: true, class: "edit_profile_form" do |f|%>
         <div class="edit_profile_form_left">
@@ -167,4 +166,7 @@
       </div>
     </div>
   </div>
+  <% if current_user.email == 'guest@example.com' %> <%# ボトムインフォ %>
+    <%= render partial: "shared/guest_user_notice" %>
+  <% end %>
 </div>
