--- a/app/views/categories/_main_view_index.html.erb
+++ b/app/views/categories/_main_view_index.html.erb
@@ -124,3 +124,10 @@
     <%= render partial: "shared/guest_user_notice" %>
   <% end %>
 </div>
+
+<% if flash[:guest_user_error] %> <%# センターメッセージ %>
+  <div class="guest_user_error">
+    <p class="guest_user_error_x-mark"><i class="fa-solid fa-xmark"></i></p>
+    <p><%= flash[:guest_user_error] %></p>
+  </div>
+<% end %>
