--- a/app/assets/stylesheets/styles.css.erb
+++ b/app/assets/stylesheets/styles.css.erb
@@ -207,7 +207,7 @@ svg {
   text-align: center;
   box-shadow: 0px 0px 7px #888;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   top: 65px;
   right: 0;
   display: none;
@@ -269,10 +269,63 @@ svg {
   font-size: 12px;
 }
 
+/* ボトムインフォ */
+
+.guest_user_notice {
+  margin-top: -80px;
+  min-width: 1400px;
+  height: 80px;
+  padding: 10px 35px;
+  background: rgba(0, 0, 0, 0.45);
+  color: #fff;
+  position: sticky;
+  bottom: 0;
+  z-index: 1;
+  overflow: hidden;
+}
+
+.guest_user_info_btns {
+  margin-top: 10px;
+}
+
+.guest_user_info_btn {
+  width: 250px;
+  margin-right: 10px;
+  display: inline-block;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 3px;
+  text-align: center;
+}
+
+.guest_user_info_btn:hover {
+  background: #fff;
+  color: rgba(0, 0, 0, 0.45);
+}
+
+/* センターメッセージ */
+
+.guest_user_error {
+  padding: 60px;
+  background-color: rgba(0, 0, 0, 0.45);
+  text-align: center;
+  color: #fff;
+  position: fixed;
+  top: 50vh;
+  left: calc(50vw + 150px);
+  transform: translate(-50%, -50%);
+}
+
+.guest_user_error_x-mark {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
+}
 
 /* メインコンテンツ */
 .main_contents {
-  padding: 30px 0;
   height: calc(100vh - 131px);
   background-color: #f5f5f5;
   overflow-y: auto;
@@ -280,12 +333,11 @@ svg {
 }
 
 .main_contents_wrapper {
-  margin-left: 35px;
-  height: 100%;
+  padding: 30px 0 30px 35px;
+  min-height: 100%;
 }
 
 .characters {
-  padding-bottom: 15px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -972,6 +1024,10 @@ svg {
 }
 
 /* カテゴリ登録ページ */
+
+.height_lock {
+  height: 100%;
+}
 
 .category_input {
   border: none;
