--- a/app/views/characters/_main_view_character_edit.html.erb
+++ b/app/views/characters/_main_view_character_edit.html.erb
@@ -166,7 +166,5 @@
       </div>
     </div>
   </div>
-  <% if current_user.email == 'guest@example.com' %> <%# ボトムインフォ %>
-    <%= render partial: "shared/guest_user_notice" %>
-  <% end %>
+  <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
 </div>
