--- a/app/views/characters/_main_view_character_new.html.erb
+++ b/app/views/characters/_main_view_character_new.html.erb
@@ -128,7 +128,5 @@
       </div>
     <% end %>
   </div>
-  <% if current_user.email == 'guest@example.com' %> <%# ボトムインフォ %>
-    <%= render partial: "shared/guest_user_notice" %>
-  <% end %>
+  <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
 </div>
