--- a/app/views/categories/_main_view_index.html.erb
+++ b/app/views/categories/_main_view_index.html.erb
@@ -120,9 +120,7 @@
       <% end %>
     </div>
   </div>
-  <% if current_user.email == 'guest@example.com' %> <%# ボトムインフォ %>
-    <%= render partial: "shared/guest_user_notice" %>
-  <% end %>
+  <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
 </div>
 
 <% if flash[:guest_user_error] %> <%# センターメッセージ %>
