エラーメッセージ配置の編集

--- a/app/views/categories/_main_view_edit.html.erb
+++ b/app/views/categories/_main_view_edit.html.erb
@@ -33,6 +33,7 @@
   </div>
 
   <div class="main_contents">
+    <%= render "shared/error_messages", model: f.object %> <%# バリデーションエラーメッセージ %>
     <div class="main_contents_wrapper">
       <div class="character_list">
         <div class="character_list_top">
