--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,7 @@
     <h2 class="user_page_title">新規アカウント</h2>
     <div class="signin_field">
       <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), local: true do |f|%>
+        <%= render "devise/shared/error_messages", resource: resource %>
         <%= f.text_field :name, autofocus: true, class: "login_input", placeholder: "Name" %>
         <%= f.email_field :email, class: "login_input", placeholder: "Email" %>
         <%= f.password_field :password, autocomplete: "off", class: "login_input", placeholder: "Password" %>
