--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,6 +7,7 @@
     </div>
     <h2 class="user_page_title">ユーザー編集</h2>
     <%= form_with model: current_user, local: true do |f|%>
+      <%= render "shared/users_edit_error_messages", model: f.object %>
       <div class="user_edit_field">
         <div class="user_edit_field_left">
           <div class="user_image_field">
