--- a/app/assets/stylesheets/users.css.erb
+++ b/app/assets/stylesheets/users.css.erb
@@ -39,16 +39,13 @@
 }
 
 .login_input {
+  margin-bottom: 15px;
   padding: 10px 20px;
   width: 100%;
   border: 1px solid #770099;
   border-radius: 5px;
   font-size: 18px;
   display: block;
-}
-
-.login_input + .login_input {
-  margin-top: 15px;
 }
 
 .login_btn {
@@ -203,6 +200,7 @@
 .selected_user_image {
   width: 100%;
   height: 100%;
+  background-color: #fff;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -263,4 +261,15 @@
 
 .user_delete_link a:hover {
   text-decoration: underline;
+}
+
+/* エラー表示 */
+
+#error_explanation {
+  color: red;
+  margin-bottom: 20px;
+}
+
+#error_explanation li {
+  list-style: inside;
 }
