画像表示微修正

--- a/app/assets/stylesheets/styles.css.erb
+++ b/app/assets/stylesheets/styles.css.erb
@@ -1133,6 +1133,8 @@ svg {
   width: 40px;
   border-radius: 50%;
   border: 1px solid #f8e8ff;
+  object-fit: cover;
+  
 }
 
 .character_input_name {
