id名の微修正

--- a/app/views/categories/_main_view_show.html.erb
+++ b/app/views/categories/_main_view_show.html.erb
@@ -105,7 +105,7 @@
                 <% end %>
               <% end %>
             </div>
-            <div class="past_topic" id="past_topic_<%= character.id %>">
+            <div class="past_topic" id="past_topic_character_<%= character.id %>">
               <div class="topic_type_past">
                 Past
               </div>
