メインロゴの変更

--- a/app/views/shared/_side_bar.html.erb
+++ b/app/views/shared/_side_bar.html.erb
@@ -1,7 +1,7 @@
 <div class="side_bar_top">
   <div class="main_logo_wrapper">
     <%= link_to root_path do %>
-      <%= image_tag "main_logo.png" %>
+      <%= image_tag "main_logo.png", class: "main_logo" %>
     <% end %>
   </div>
 </div>
