ゲストログイン情報削除

--- a/app/views/categories/_main_view_index.html.erb
+++ b/app/views/categories/_main_view_index.html.erb
@@ -120,7 +120,7 @@
       <% end %>
     </div>
   </div>
-  <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
+  <%#= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
 </div>
 
 <% if flash[:guest_user_error] %> <%# センターメッセージ %>
