--- a/app/views/characters/_main_view_character_edit.html.erb
+++ b/app/views/characters/_main_view_character_edit.html.erb
@@ -166,5 +166,5 @@
       </div>
     </div>
   </div>
-  <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
+  <%#= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
 </div>
