--- a/app/views/characters/_main_view_character_new.html.erb
+++ b/app/views/characters/_main_view_character_new.html.erb
@@ -128,5 +128,5 @@
       </div>
     <% end %>
   </div>
-  <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
+  <%#= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
 </div>
