--- a/app/views/categories/_main_view_new.html.erb
+++ b/app/views/categories/_main_view_new.html.erb
@@ -62,6 +62,6 @@
         </div>
       </div>
     </div>
-    <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
+    <%#= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
   </div>
 <% end %>
