--- a/app/views/categories/_main_view_show.html.erb
+++ b/app/views/categories/_main_view_show.html.erb
@@ -127,5 +127,5 @@
       <% end %>
     </div>
   </div>
-  <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
+  <%#= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
 </div>
