--- a/app/views/shared/_guest_user_notice.html.erb
+++ b/app/views/shared/_guest_user_notice.html.erb
@@ -3,7 +3,7 @@
     <p>ゲストユーザーでログインしています。　※データは定期的に初期化されますが、投稿は公開されますので投稿内容にはご注意下さい。</p>  
     <div class="guest_user_info_btns">
       <%= link_to "ログインページ", destroy_user_session_path, method: :delete, class: "guest_user_info_btn" %>
-      <%= link_to "Topic Stockerとは", "#", class: "guest_user_info_btn" %>
+      <%= link_to "Topic Stockerとは", about_users_path , class: "guest_user_info_btn" %>
     </div>
   </div>
 <% end %>
