ヘルプボタン、ポップアップの作成

--- a/app/views/categories/_main_view_edit.html.erb
+++ b/app/views/categories/_main_view_edit.html.erb
@@ -26,7 +26,9 @@
 
   <div class="main_top_sub">
     <div class="main_top_sub_left">
-      <p class="sort_btn active">50音順</p>
+      <div class="main_top_sub_btn active">50音順</div>
+      <div class="main_top_sub_partition"></div>
+      <div class="main_top_sub_btn click_btn help_btn">入力ヘルプ</div>
     </div>
     <div class="main_top_sub_right">
     </div>
@@ -66,5 +68,13 @@
     <%#= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
   </div>
 <% end %>
+
+<div class="help_view"> <%# ヘルプ表示 %>
+  <div class="help_image_wrapper help_image_tall">
+    <p class="help_view_x-mark"><i class="fa-solid fa-xmark"></i></p>
+    <%= image_tag 'help/edit_category.png', class: "help_image" %>
+  </div>
+</div>
+
 
 
