--- a/app/views/categories/_main_view_index.html.erb
+++ b/app/views/categories/_main_view_index.html.erb
@@ -26,15 +26,17 @@
 <div class="main_top_sub">
   <div class="main_top_sub_left">
     <% unless params[:sort] %>
-      <div class="sort_btn active">会話日付順</div>
+      <div class="main_top_sub_btn active">会話日付順</div>
     <% else %>
-      <%= link_to "会話日付順", root_path, class: "sort_btn click_btn" %>
+      <%= link_to "会話日付順", root_path, class: "main_top_sub_btn click_btn" %>
     <% end %>
     <% if params[:sort] == "updated_at" %>
-      <div class="sort_btn active">入力更新順</div>
+      <div class="main_top_sub_btn active">入力更新順</div>
     <% else %>
-      <%= link_to "入力更新順", root_path(sort: "updated_at"), class: "sort_btn click_btn" %>
+      <%= link_to "入力更新順", root_path(sort: "updated_at"), class: "main_top_sub_btn click_btn" %>
     <% end %>
+    <div class="main_top_sub_partition"></div>
+    <div class="main_top_sub_btn click_btn help_btn">入力ヘルプ</div>
   </div>
   <div class="main_top_sub_right">
     <div id="update_time"></div>
@@ -120,12 +122,19 @@
       <% end %>
     </div>
   </div>
-  <%#= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
+  <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
 </div>
 
-<% if flash[:guest_user_error] %> <%# センターメッセージ %>
+<% if flash[:guest_user_error] %> <%# ゲスト編集エラーメッセージ %>
   <div class="guest_user_error">
     <p class="guest_user_error_x-mark"><i class="fa-solid fa-xmark"></i></p>
     <p><%= flash[:guest_user_error] %></p>
   </div>
 <% end %>
+
+<div class="help_view"> <%# ヘルプ表示 %>
+  <div class="help_image_wrapper help_image_wide">
+    <p class="help_view_x-mark"><i class="fa-solid fa-xmark"></i></p>
+    <%= image_tag 'help/edit_data.png', class: "help_image" %>
+  </div>
+</div>
