制御JSの読み込み

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_pack_tag "open-operation-btn" %>
+<%= javascript_pack_tag "open-operation-btn", "open-popup", "close-popup" %>
 
 
 <div class="wrapper">
