--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_pack_tag "indexpage-delete-topic", "indexpage-new-topic", "select-character", "update-topic", "open-operation-btn" %>
+<%= javascript_pack_tag "indexpage-delete-topic", "indexpage-new-topic", "select-character", "update-topic", "open-operation-btn", "open-popup", "close-popup" %>
 
 <div class="wrapper">
   <div class="side_bar">
