--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_pack_tag "edit-sns", "select-category", "character-view-selected-image", "open-operation-btn" %>
+<%= javascript_pack_tag "edit-sns", "select-category", "character-view-selected-image", "open-operation-btn", "open-popup", "close-popup" %>
 
 <div class="wrapper">
   <div class="side_bar">
