ゲストログイン情報追加

--- a/app/views/categories/_main_view_edit.html.erb
+++ b/app/views/categories/_main_view_edit.html.erb
@@ -65,7 +65,7 @@
         </div>
       </div>
     </div>
-    <%#= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
+    <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
   </div>
 <% end %>
 
