--- a/app/views/characters/_main_view_character_edit.html.erb
+++ b/app/views/characters/_main_view_character_edit.html.erb
@@ -166,7 +166,7 @@
       </div>
     </div>
   </div>
-  <%#= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
+  <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
 </div>
 
 <div class="help_view"> <%# ヘルプ表示 %>
