--- a/app/views/categories/_main_view_new.html.erb
+++ b/app/views/categories/_main_view_new.html.erb
@@ -64,7 +64,7 @@
         </div>
       </div>
     </div>
-    <%#= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
+    <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
   </div>
 <% end %>
 
