--- a/app/views/categories/_main_view_show.html.erb
+++ b/app/views/categories/_main_view_show.html.erb
@@ -129,7 +129,7 @@
       <% end %>
     </div>
   </div>
-  <%#= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
+  <%= render partial: "shared/guest_user_notice" %> <%# ボトムインフォ %>
 </div>
 
 <div class="help_view"> <%# ヘルプ表示 %>
