google Formsのリンク修正

--- a/app/views/shared/_side_bar.html.erb
+++ b/app/views/shared/_side_bar.html.erb
@@ -48,7 +48,7 @@
   </div>
 
   <div class="footer">
-    <%= link_to "https://docs.google.com/forms/d/e/1FAIpQLSfIDgp729aN46vSjLe96s_iswtG5zf7_03AtfwCIfvY3lMvZA/viewform", class: "feedback_link click_btn_underline" do %>
+    <%= link_to "https://docs.google.com/forms/d/e/1FAIpQLScgOc005I-47cYgQ4LMH3cDTcRzxWv5AAWBYtM0OUwa0xJHUw/viewform", target: "_blank", rel: "noopener noreferrer", class: "feedback_link click_btn_underline" do %>
       <i class="fa-solid fa-lightbulb"></i>フィードバックを送信
     <% end %>
     <div class="copy_right">
