--- a/app/assets/stylesheets/users.css.erb
+++ b/app/assets/stylesheets/users.css.erb
@@ -58,6 +58,11 @@
   display: block;
 }
 
+.account_provider {
+  text-align: left;
+  color:#770099
+}
+
 .login_btn {
   margin-top: 20px;
   padding: 10px 20px;
@@ -77,6 +82,31 @@
 .signup_btn:hover,
 .user_update_btn:hover {
   background-color: #5a0073;
+}
+
+.google_login_btn {
+  width: 100%;
+  height: 50px;
+  margin-top: 15px;
+  padding: 0 30px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  border-radius: 5px;
+  border: 1px solid #aaaaaa;
+  text-align: center;
+  background-color: #fff;
+}
+
+.google_login_btn img {
+  height: 60%;
+  margin-right: 10px;
+}
+
+.google_login_btn p {
+  flex: 1;
+  font-family: 'Roboto', sans-serif;
+  color: #555555;
 }
 
 .other_link {
